# go-study

./: .gitignore  BUILD.bazel  LICENSE  deps.bzl  go.mod
libs/destory/: BUILD.bazel  app_test.go  go.mod
libs/gonum/: BUILD.bazel  go.mod
libs/hello/: BUILD.bazel
libs/study/: BUILD.bazel  app_test.go  go.mod
services/gin-casbin-demo/: BUILD.bazel  app.go  authz_model.conf  go.mod
services/gin-demo/: BUILD.bazel  go.mod  go.sum
