load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "destory_lib",
    srcs = ["app.go"],
    importpath = "github.com/xunfeng1980/go-study/libs/destory",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "destory",
    embed = [":destory_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "destory_test",
    srcs = ["app_test.go"],
    embed = [":destory_lib"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
