load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "study_lib",
    srcs = ["app.go"],
    importpath = "github.com/xunfeng1980/go-study/libs/study",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "study",
    embed = [":study_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "study_test",
    srcs = ["app_test.go"],
    embed = [":study_lib"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
