load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gin-demo_lib",
    srcs = ["app.go"],
    importpath = "github.com/xunfeng1980/go-study/services/gin-demo",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "gin-demo",
    embed = [":gin-demo_lib"],
    visibility = ["//visibility:public"],
)
